# rust6502lib

./: .gitignore  Cargo.toml  README.md
rust6502lexer/: Cargo.toml
rust6502lexer/examples/: nesgame.a65
rust6502lexer/src/: char_utils.rs  lexer.rs  lib.rs  main.rs  state_machine.rs  token.rs
rust6502lexer/src/utils/: mod.rs
rust6502parser/: Cargo.toml
src/: lib.rs  main.rs  memory.rs  parser.rs
src/data/: opcodes.json
src/registers/: StatusRegister.rs  general_register.rs  mod.rs  program_counter.rs  stack_pointer.rs  status_register.rs
