[package]
name = "emu_attack"
version = "0.1.0"
authors = ["mark chaitin <mchaitin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.11"
flexi_logger = "0.15.12"
hex = "0.4.2"
serde = "1.0.115"
serde_json = "1.0.57"

[dev-dependencies]
test-case = "1.0.0"
rand = "0.7.3"